[package]
name = "atomic-id"
version = "0.1.0"
edition = "2024"

[dependencies]

[features]
default = []
short = []

[profile.release]
opt-level      = 3          # best runtime speed
lto            = "thin"     # or "fat" for small crates (<~100 kLoC)
codegen-units  = 1          # maximises inlining
panic          = "abort"    # removes unwinding machinery
incremental    = false      # clean IR for LLVM
strip          = "symbols"  # requires Rust ≥1.77 (smaller binary)
debug          = false
