[package]
name = "atomic-id"
version = "0.1.0"
edition = "2024"
authors = ["ZonBlade"]
description = "Very fast and unique id generation"
license = "MIT"
repository = "https://github.com/zonblade/atomic-rs"
readme = "./README.md"
keywords = ["atomic-id", "unique-id", "id-generator", "concurrency", "lock-free", "cryptography"]
categories = ["utilities", "cryptography", "concurrency"]

[dependencies]

[features]
default = []
short = []

[profile.release]
opt-level      = 3          # best runtime speed
lto            = "thin"     # or "fat" for small crates (<~100 kLoC)
codegen-units  = 1          # maximises inlining
panic          = "abort"    # removes unwinding machinery
incremental    = false      # clean IR for LLVM
strip          = "symbols"  # requires Rust ≥1.77 (smaller binary)
debug          = false
